fix: fix profile page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "StudySync",
-  "short_name": "SS",
+  "short_name": "StudySync",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
